<resources>
    <string name="app_name">Cinemania</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_search">Search</string>
    <string name="filter_button">Filtra</string>
    <string name="year_select">Select year</string>
    <string name="genre_select">Select genre</string>
    <string name="region_select">Select region</string>
    <string name="language_select">Select language</string>
    <string name="name">Name</string>
    <string name="username">User</string>
    <string name="email">Email</string>
    <string name="email_edit">Edit email</string>
    <string name="name_edit">Edit name</string>
    <string name="password">Change password</string>
    <string name="camera">Open camera</string>
    <string name="gallery">Open gallery</string>
    <string name="logout">Logout</string>
    <string name="delete">Delete account</string>
    <string name="username_edit">Edit username</string>
    <string name="emptysearchresults">Nothing found</string>
    <string name="nomoviesfound">No movies</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="upcoming">Upcoming Movies</string>
    <string name="action">Action Movies</string>
    <string name="adventure">Adventure Movies</string>
    <string name="animation">Animation Movies</string>
    <string name="comedy">Comedy Movies</string>
    <string name="crime">Crime Movies</string>
    <string name="documentary">Documentary Movies</string>
    <string name="drama">Drama Movies</string>
    <string name="family">Family Movies</string>
    <string name="fantasy">Fantasy Movies</string>
    <string name="history">History Movies</string>
    <string name="horror">Horror Movies</string>
    <string name="music">Music Movies</string>
    <string name="mystery">Mystery Movies</string>
    <string name="romance">Romance Movies</string>
    <string name="science_fiction">Science Fiction Movies</string>
    <string name="thriller">Thriller Movies</string>
    <string name="war">War Movies</string>
    <string name="western">Western Movies</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_sign_up">Let\'s go!</string>
    <string name="back_to_login">Already have an account? Login!</string>
    <string name="forgot_pass">Forget password?</string>
    <string name="login">Login</string>
    <string name="register">New user? Sign up!</string>
    <string name="title_activity_splash_screen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
